# dual-brain

./: .gitignore  bot.py  dual-brain-site.html  exception-queue.html  mind.py
docs/: latent-space-architecture.md
sentinel/: README.md  __init__.py  atlas_bridge.py  cli.py  install.sh  pyproject.toml
sentinel/api/: server.py
sentinel/core/: embeddings.py  engine.py  models.py
sentinel/detectors/: content_analysis.py  semantic.py  tool_control.py
sentinel/log/: dispatch.py  threat_intel.py
sentinel/tests/: test_extended.py  test_sentinel.py
