[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "sentinel-detect"
version         = "0.1.0"
description     = "Prompt injection detection for agentic AI stacks"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "prompt-injection", "llm-security", "ai-security",
    "agentic-ai", "red-teaming", "threat-detection"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
full = [
    "anthropic>=0.25.0",
    "ollama>=0.2.0",
    "sentence-transformers>=2.7.0",
    "qdrant-client>=1.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
sentinel       = "sentinel.cli:main"
sentinel-serve = "sentinel.api.server:run"

[project.urls]
Homepage   = "https://github.com/your-org/sentinel"
Repository = "https://github.com/your-org/sentinel"
Issues     = "https://github.com/your-org/sentinel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.pytest.ini_options]
testpaths    = ["sentinel/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
